# ur_admittance_controller

./: .gitignore  ADMITTANCE_COMPARISON_ANALYSIS.md  Admittance_Math_Comparison.md  CLAUDE.md  CMakeLists.txt  CODE_IMPROVEMENT_RECOMMENDATIONS.md  COMPLETED_IMPROVEMENTS_SUMMARY.md  CONTROL_FLOW_ANALYSIS.md  Control_Flow_Comparison_Plan.md  DEAD_CODE_ANALYSIS_REPORT.md  DEPENDENCIES.md  Direct_Main_Loop_Plan.md  ERROR_HANDLING.md  FILE_SPLIT_SUMMARY.md  FINAL_IMPROVEMENTS_COMPLETED.md  FOLDER_OPTIMIZATION_PLAN.md  FORCE_SENSOR_ANALYSIS_REPORT.md  IK_COMPARISON_ANALYSIS.md  INTEGRATION_METHOD_COMPARISON.md  MATHEMATICAL_COMPARISON_REPORT.md  MIGRATION_PLAN.md  PACKAGE_ANALYSIS_REPORT.md  PARAMETER_ALIGNMENT_CHANGES.md  PARAMETER_COMPARISON_ANALYSIS.md  PARAMETER_MANAGEMENT_ANALYSIS.md  PLAN.md  PSEUDO_CODE.md  Phase_1_3_Implementation_Summary.md  README.md  REFACTORING_PLAN.md  ROS1_Style_Improvements_Summary.md  ROS1_to_ROS2_Analysis.md  ROS1_vs_ROS2_Analysis_Report.md  ROS1_vs_ROS2_Detailed_Comparison.md  ROS2_Control_Loop_Modernization_Plan.md  SIMPLIFICATION_PLAN.md  SRC_CODE_ANALYSIS_REPORT.md  Simple_ROS2_Loop_Plan.md  Step_By_Step_Control_Flow_Improvement_Plan.md  TECHNICAL_SOURCE_CODE_ANALYSIS.md  (+14 more)
.serena/: project.yml
config/: admittance_config.yaml  admittance_sim_mode.yaml  equilibrium.yaml  force_bias_est.h5  ft_sensor_config.yaml  impedance_examples.yaml  safe_startup.yaml  ur_admittance_controllers.yaml  ur_admittance_controllers_hw.yaml  ur_complete_system.yaml  ur_controllers.yaml  ur_type_override.yaml  wrench_calibration.yaml
docs/: API_REFERENCE.md  ARCHITECTURE.md  FRAME_DIAGRAM.md  F_T_SENSOR_UPDATE.md  GZ_SIMULATION_SETUP.md  NOTATION_COMPLETION_REPORT.md  NOTATION_GUIDE.md  NOTATION_IMPLEMENTATION_SUMMARY.md  PARAMETER_VALIDATION_REMOVAL.md  ROS2_Control_Comprehensive_Guide.md  SETUP_GUIDE.md  UR_ROS2_Controller_Guide.md  comparison_analysis.md  debugging.md  dependencies.md  dual_mode_ft_sensor_implementation_plan.md  dual_mode_ft_sensor_task_list.md  error_handling_philosophy.md  matrix_operations_safety_implementation.md  matrix_operations_safety_plan.md  node_transition_plan.md  notation.md  pulse_ur_comparison.md  refactoring_completion.md  refactoring_plan.md  style.md  tf_optimization_plan.md  transform_analysis.md
first_switch/: metadata.yaml
include/: admittance_computations.hpp  admittance_computations.hpp:Zone.Identifier  admittance_constants.hpp  admittance_controller.hpp  admittance_controller_services.hpp  admittance_node.hpp  admittance_node.hpp:Zone.Identifier  admittance_node_types.hpp  admittance_types.hpp  calibration_types.hpp  init_robot.hpp  matrix_utilities.hpp  wrench_calibration_algorithm.hpp  wrench_calibration_node.hpp  wrench_compensation.hpp  wrench_node.hpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
launch/: admittance_control.launch.py  admittance_node.launch.py  ft_sensor_broadcaster.launch.py  impedance_demo.launch.py  load_controller.launch.py  test_admittance_node.launch.py  test_runner.launch.py  test_topic_mode.launch.py  ur_admittance.launch.py  ur_admittance.launch.py.old  ur_admittance_controller.launch.py  ur_admittance_sim.launch.py  ur_admittance_system.launch.py
log/: latest_build
scripts/:  ur_admittance_tests.py  controller_status.py  init_admittance.py  init_robot.py  safe_startup_test.py  system_status.py  test_impedance_modes.py  test_safe_startup.py  test_suite.py  ur_admittance_tests.py  ur_admittance_utils.py  validate.py  validate_node_transition.py  validate_notation.py
src/: Untitled-1.cpp  admittance_computations.cpp  admittance_computations.cpp.backup  admittance_computations.cpp:Zone.Identifier  admittance_computations_new.cpp  admittance_controller.cpp  admittance_controller_parameters.yaml  admittance_node.cpp  admittance_node.cpp:Zone.Identifier  admittance_node_new.cpp  communication_interface.cpp  control_computations.cpp  controller_integration.cpp  controller_lifecycle.cpp  controller_setup.cpp  controller_setup.cpp.backup  init_robot.cpp  joint_motion_example.cpp  node_integration.cpp  parameter_validation.cpp  plugin_export.cpp  realtime_computations.cpp  realtime_control_core.cpp  rt_logging.cpp  sensor_handling.cpp  sensor_interface.cpp  sensor_processing.cpp  utilities.cpp  verify_poses.cpp  wrench_calibration_algorithm.cpp  wrench_calibration_node.cpp  wrench_compensation.cpp  wrench_node.cpp  wrench_node_new.cpp  wrench_signal_generator.cpp
temp2/: Actions vs Views.md  Advanced Pattern Matching — Mach7.md  Algebraic Data Types — Sum & Product.md  Bitmapped Vector Trie — Append & Update.md  Bitmapped Vector Trie — Lookup.md  Bitmapped Vector Trie — Remove & Other Ops.md  Chapter 10 Summary.md  Chapter 7 Summary.md  Chapter 8 Summary.md  Chapter 9 Summary.md  Continuation Monad — Futures.md  Domain Modeling with ADTs — Tennis Kata.md  Failure Handling — optional, expected, Try.md  Functors — Transform on Wrappers.md  Immutable Linked Lists.md  Immutable Vector-like Structures.md  Monad Composition (Kleisli).md  Monads — join & mbind.md  Optional & Expected for Errors.md  Pattern Matching — std::visit & Overloaded.md  Persistent List Memory Management.md  Ranges — Intro & Pipe Syntax.md  Sentinels, Delimited & Infinite Ranges.md  Sum Types via Inheritance vs std::variant.md  Vectors & Ranges — mbind in practice.md  Views — filter, transform, take, zip.md  Word Frequencies with Ranges.md  Writer — Handling State with Logs.md
temp3/: Actor Model — Components, Not Getters_Setters.md  Auto-Generating Tests — Generators.md  Building a Simple Message Source (Boost.Asio).md  Calling All Callables — `std::invoke` & `std::apply`.md  Chapter 11 Summary.md  Chapter 12 Summary.md  Chapter 13 Summary.md  Checking Type Properties — `void_t`, SFINAE, `constexpr if`.md  Comparative Testing.md  Compile-Time Type Manipulation.md  Compile-time Safety — Move Errors to Compile-Time.md  Currying Any Callable.md  Debugging Deduced Types & Basic Metafunctions.md  Distributed Systems with Actors.md  Filtering & Error Handling (expected_mtry_mbind).md  (+7 more)
(+63 files in other folders)
