<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur_admittance_controller</name>
  <version>2.0.0</version>
  <description>6-DOF force-compliant motion control for Universal Robots using admittance control</description>
  
  <maintainer email="your_email@example.com">UR Robotics Team</maintainer>
  <license>Apache-2.0</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Core ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>pluginlib</depend>
  <depend>generate_parameter_library</depend>
  
  <!-- Message dependencies -->
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  
  <!-- Additional dependencies for init_robot and verify_poses -->
  <depend>rclcpp_action</depend>
  <depend>control_msgs</depend>
  <depend>controller_manager_msgs</depend>
  <depend>rcl_interfaces</depend>
  
  <!-- Kinematics dependencies -->
  <depend>kdl_parser</depend>
  <depend>urdf</depend>
  <depend>orocos_kdl_vendor</depend>
  
  <!-- System dependencies -->
  <depend>eigen</depend>
  
  <!-- Python dependencies -->
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  
  <!-- Testing dependencies -->
  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>ros2_control_test_assets</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>