<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur_admittance_controller</name>
  <version>2.0.0</version>
  <description>6-DOF force-compliant motion control for Universal Robots using admittance control</description>
  
  <maintainer email="your_email@example.com">UR Robotics Team</maintainer>
  <license>Apache-2.0</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>pluginlib</depend>
  <depend>generate_parameter_library</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>controller_manager_msgs</depend>
  <depend>rcl_interfaces</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>kdl_parser</depend>
  <depend>urdf</depend>
  <depend>orocos_kdl_vendor</depend>
  <depend>eigen</depend>
  <depend>yaml-cpp</depend>
  
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ur_simulation_gz</exec_depend>
  
  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>ros2_control_test_assets</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>